--- a/content/docs/orders/order-01.mdx
+++ b/content/docs/orders/order-01.mdx
@@ -1,8 +1,14 @@
 ---
 title: Order 01
-description: Order 01
 ---
 
 import { OrderOne } from "@/components/commercn/orders/order-01"
+import { BlockPreview } from '@/components/block-preview';
 
-<OrderOne />
+```npm
+npx shadcn@latest add "https://commercn.com/order-01"
+```
+
+<BlockPreview>
+    <OrderOne />
+</BlockPreview>
