--- a/content/docs/products/product-card-01.mdx
+++ b/content/docs/products/product-card-01.mdx
@@ -1,8 +1,14 @@
 ---
 title: Product Card 01
-description: Product Card 01
 ---
 
-import { ProductCardOne } from '@/components/commercn/product-cards/product-card-01';
+```npm
+npx shadcn@latest add "https://commercn.com/product-card-01"
+```
 
-<ProductCardOne />
+import { ProductCardOne } from '@/components/commercn/product-cards/product-card-01';
+import { BlockPreview } from '@/components/block-preview';
+
+<BlockPreview>
+    <ProductCardOne />
+</BlockPreview>
