--- a/content/docs/products/product-card-02.mdx
+++ b/content/docs/products/product-card-02.mdx
@@ -1,9 +1,14 @@
 ---
 title: Product Card 02
-description: User profile card with followers, following, and follow button
 ---
 
+```npm
+npx shadcn@latest add "https://commercn.com/product-card-02"
+```
 
 import { ProductCardTwo } from '@/components/commercn/product-cards/product-card-02';
+import { BlockPreview } from '@/components/block-preview';
 
-<ProductCardTwo />
+<BlockPreview>
+    <ProductCardTwo />
+</BlockPreview>
