--- a/content/docs/products/product-card-03.mdx
+++ b/content/docs/products/product-card-03.mdx
@@ -1,8 +1,14 @@
 ---
 title: Product Card 03
-description: Service booking card with rating, schedule, and pricing information
 ---
 
-import { ProductCardThree } from '@/components/commercn/product-cards/product-card-03';
+```npm
+npx shadcn@latest add "https://commercn.com/product-card-03"
+```
 
-<ProductCardThree />
+import { ProductCardThree } from '@/components/commercn/product-cards/product-card-03';
+import { BlockPreview } from '@/components/block-preview';
+
+<BlockPreview>
+    <ProductCardThree />
+</BlockPreview>
