--- a/content/docs/carts/cart-item-01.mdx
+++ b/content/docs/carts/cart-item-01.mdx
@@ -1,8 +1,14 @@
 ---
 title: Shopping Cart 01
-description: ShoppingC art 01
 ---
 
-import { ShoppingCartOne } from '@/components/commercn/carts/cart-01';
+```npm
+npx shadcn@latest add "https://commercn.com/cart-01"
+```
 
-<ShoppingCartOne />
+import { ShoppingCartOne } from '@/components/commercn/carts/cart-01';
+import { BlockPreview } from '@/components/block-preview';
+
+<BlockPreview>
+    <ShoppingCartOne />
+</BlockPreview>
