--- a/content/docs/carts/cart-item-02.mdx
+++ b/content/docs/carts/cart-item-02.mdx
@@ -1,8 +1,14 @@
 ---
 title: Shopping Cart 02
-description: ShoppingC art 02
 ---
 
-import { ShoppingCartTwo } from '@/components/commercn/carts/cart-02';
+```npm
+npx shadcn@latest add "https://commercn.com/cart-02"
+```
 
-<ShoppingCartTwo />
+import { ShoppingCartTwo } from '@/components/commercn/carts/cart-02';
+import { BlockPreview } from '@/components/block-preview';
+
+<BlockPreview>
+    <ShoppingCartTwo />
+</BlockPreview>
