--- a/content/docs/product-details/product-details-01.mdx
+++ b/content/docs/product-details/product-details-01.mdx
@@ -1,8 +1,14 @@
 ---
 title: Product Details 01
-description: Product Details 01
 ---
 
-import { ProductDetailOne } from "@/components/commercn/product-details/product-detail-01"
+```npm
+npx shadcn@latest add "https://commercn.com/product-detail-01"
+```
 
-<ProductDetailOne />
+import { ProductDetailOne } from "@/components/commercn/product-details/product-detail-01"
+import { BlockPreview } from '@/components/block-preview';
+
+<BlockPreview>
+    <ProductDetailOne />
+</BlockPreview>
